# KongouFileMover

./: .gitignore  .travis.yml  CMakeLists.txt  KongouFileMover.sln  LICENSE  README.md  index.html  params.json
KongouFileMover/: CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationReader.cpp  ConfigurationReader.h  ConfigurationState.h  Expression.cpp  Expression.h  FileNameHandler.cpp  FileNameHandler.h  FileNameRegexer.cpp  FileNameRegexer.h  FileRename.h  FilesState.h  GlobalData.h  KongouFileMover.vcxproj  KongouFileMover.vcxproj.filters  Logger.cpp  Logger.h  Main.cpp  RegexState.h  Resource.h  Resource.rc  StringExtension.h  config.ini  config.json
doc/: defaultconfig.json
res/: Resource.rc
src/: ConfigurationReader.cpp  ConfigurationReader.h  FileNameHandler.cpp  FileNameHandler.h  FileRename.h  GlobalData.cpp  KRegex.h  Main.cpp
